--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -56,7 +56,7 @@
             <input id="phoneNumber" name="phoneNumber" placeholder="Entrez votre numéro de téléphone" type="tel" th:value="${session.subscription.member.phoneNumber}" disabled>
         </div>
         <div>
-            <label for="admin">Niveau</label>
+            <label for="admin">Administrateur</label>
             <input id="admin" name="admin" placeholder="Entrez votre niveau" type="text" th:value="${session.subscription.status.admin}" disabled>
         </div>
         <div>
