--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -36,9 +36,9 @@
                            th:value="${session.subscription.member.lastName}" disabled>
                 </div>
                 <div class="gender-details">
-                    <input type="radio" name="gender" id="dot-1">
-                    <input type="radio" name="gender" id="dot-2">
-                    <input type="radio" name="gender" id="dot-3">
+                    <input type="radio" name="sex" id="dot-1">
+                    <input type="radio" name="sex" id="dot-2">
+                    <input type="radio" name="sex" id="dot-3">
                     <span class="gender-title">Sexe</span>
                     <div class="category">
                         <label for="dot-1">
