--- a/src/main/resources/templates/signupmember.html
+++ b/src/main/resources/templates/signupmember.html
@@ -37,9 +37,9 @@
                            placeholder="Entrez votre nom" required type="text">
                 </div>
                 <div class="gender-details">
-                    <input type="radio" name="gender" value="homme" id="dot-1">
-                    <input type="radio" name="gender" value="femme" id="dot-2">
-                    <input type="radio" name="gender" value="autre" id="dot-3">
+                    <input type="radio" name="sex" value="homme" id="dot-1">
+                    <input type="radio" name="sex" value="femme" id="dot-2">
+                    <input type="radio" name="sex" value="autre" id="dot-3">
                     <span class="gender-title">Sexe</span>
                     <div class="category">
                         <label for="dot-1">
@@ -53,7 +53,7 @@
                         </label>
                         <label for="dot-3">
                             <span class="dot three"></span>
-                            <span class="gender"> Autre </span>
+                            <span class="sex"> Autre </span>
                         </label>
                     </div>
                 </div>
