--- a/src/main/resources/templates/passwordforgotten.html
+++ b/src/main/resources/templates/passwordforgotten.html
@@ -3,6 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+    <meta name="viewport" content="width=device.width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link
             crossorigin="anonymous"
@@ -17,6 +18,7 @@
 <header>
     <img class="logo" src="images/logo.png">
 </header>
+<div th:insert="fragments/navbar.html :: navbar"></div>
 <main>
     <div class="center">
         <p th:text="${success}"></p>
