--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,6 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+    <meta name="viewport" content="width=device.width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link
             crossorigin="anonymous"
@@ -12,30 +13,32 @@
     />
     <link rel="stylesheet" href="css/signup.css">
     <title>Inscription</title>
+
 </head>
 <body>
 <header>
     <img class="logo" src="images/logo.png"/>
 </header>
 <div th:insert="fragments/navbar.html :: navbar"></div>
+
 <main>
     <div class="head">
         <H3>inscrivez-vous en tant que:</H3>
     </div>
-    <div class="cont">
-        <div class="container">
-            <div class="link-box">
-                <img class="image1" src="images/administrator.png">
-                <a class="link" href="/signupsuperadmin"> Admin</a>
-            </div>
-        </div>
-        <div class="container">
-            <div class="link-box">
-                <img class="image" src="images/group.png">
-                <a class="link" href="/signupmember">Membre</a>
-            </div>
+<div class="cont">
+    <div class="container" >
+        <div class="link-box">
+            <img class="image1" src="images/administrator.png">
+            <a class="link" href="/signupsuperadmin"> Admin</a>
         </div>
     </div>
+    <div class="container">
+        <div class="link-box">
+            <img class="image" src="images/group.png">
+            <a class="link" href="/signupmember">Membre</a>
+        </div>
+    </div>
+</div>
 </main>
 </body>
 </html>
