--- a/src/main/resources/static/css/error.css
+++ b/src/main/resources/static/css/error.css
@@ -3,6 +3,56 @@
     float : left;
     margin-right : 20px;
 }
+nav{
+    margin-left: 290px;
+}
+nav ul li{
+    display: inline-flex;
+    list-style: none;
+}
+nav ul li a {
+    color:darkorchid;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 0px 20px;
+}
+a{
+    position: relative;
+    cursor: pointer;
+    padding: 8px 0;
+    color: #9b59b6;
+    text-decoration: none;
+}
+a:hover{
+    color: #71b7e6;
+    text-decoration: none;
+}
+a:before, a:after {
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    bottom: -2px;
+    background: #71b7e6;
+}
+a:before {
+    left: 0;
+}
+a:after {
+    right: 0;
+    background: #9b59b6;
+    transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+a:hover:before {
+    background: #fff;
+    width: 100%;
+    transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+a:hover:after {
+    background: #fff;
+    width: 100%;
+    transition: 0s;
+}
 main{
     display: grid;
     height: 100vh;
@@ -12,8 +62,8 @@ main .head{
     padding-left: 20px;
     color: white;
 }
-@media (max-width: 684px) {
-    main{
+@media only screen and (max-width: 700px) {
+    .container{
         width: 100%;
     }
 }
