--- a/src/main/resources/static/css/passwordforgotten.css
+++ b/src/main/resources/static/css/passwordforgotten.css
@@ -3,6 +3,58 @@
     float : left;
     margin-right : 20px;
 }
+nav{
+    padding-left: 700px;
+}
+nav ul li{
+    display: inline-flex;
+    list-style: none;
+}
+nav ul li a {
+    color: blueviolet;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 0px 20px;
+}
+a{
+    position: relative;
+    display: block;
+    cursor: pointer;
+    padding: 8px 0;
+    color: #9b59b6;
+    text-decoration: none;
+}
+a:hover{
+    color: #71b7e6;
+    text-decoration: none;
+}
+
+a:before, a:after {
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    bottom: -2px;
+    background: #71b7e6;
+}
+a:before {
+    left: 0;
+}
+a:after {
+    right: 0;
+    background: #9b59b6;
+    transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+a:hover:before {
+    background: #fff;
+    width: 100%;
+    transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+a:hover:after {
+    background: #fff;
+    width: 100%;
+    transition: 0s;
+}
 main {
     display: flex;
     height: 100vh;
@@ -54,15 +106,9 @@ form .mdp input{
     border-radius: 5px;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
-@media (width: 584px) {
-    .center{
-        max-width: 100%;
+@media only screen and (max-width: 700px) {
+    .container{
+        width: 100%;
     }
-
 }
-@media (max-height: 584px) {
-    .center{
-        max-height: 100%;
-    }
 
-}
