--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -3,6 +3,56 @@
     float : left;
     margin-right : 20px;
 }
+nav{
+    padding-left: 290px;
+}
+nav ul li{
+    display: inline-flex;
+    list-style: none;
+}
+nav ul li a {
+    color:darkorchid;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 0px 20px;
+}
+a{
+    position: relative;
+    cursor: pointer;
+    padding: 8px 0;
+    color: #9b59b6;
+    text-decoration: none;
+}
+a:hover{
+    color: #71b7e6;
+    text-decoration: none;
+}
+a:before, a:after {
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    bottom: -2px;
+    background: #71b7e6;
+}
+a:before {
+    left: 0;
+}
+a:after {
+    right: 0;
+    background: #9b59b6;
+    transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+a:hover:before {
+    background: #fff;
+    width: 100%;
+    transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+}
+a:hover:after {
+    background: #fff;
+    width: 100%;
+    transition: 0s;
+}
 main{
     display: flex;
     height: 180vh;
@@ -54,38 +104,10 @@ form .user-details .gender-details{
     margin-bottom : 15px;
     width : calc(100% /2 - 20px);
 }
-form .gender-details .gender-title {
-    font-weight : 500;
-}
-form .gender-details .category {
-    display : flex;
-    width : 80%;
-    margin: 14px 0;
-    justify-content : space-between;
-}
-.gender-details .category label {
-    display : flex;
-    align-items : center;
-}
-.gender-details .category .dot{
-    height : 18px;
-    width :  18px;
-    background : #d9d9d9;
-    border-radius : 50%;
-    margin-right : 10px;
-    margin-left :5px;
-    border : 5px solid transparent;
-    transition: all 0.3s ease;
-
-}
-#dot-1:checked ~ .category  label .one,
-#dot-2:checked ~ .category  label .two,
-#dot-3:checked ~ .category  label .three {
-    border-color : #d9d9d9;
-    background: #9b59b6;
-}
-form input[type="radio"]{
-    display: none;
+.user-details .gender-details .details {
+    display: block;
+    font-weight: 500;
+    margin-bottom: 5px;
 }
 form .button{
     height: 35px;
@@ -103,4 +125,32 @@ form .button input{
     border-radius: 5px;
     letter-spacing: 1px;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
+}
+@media only screen and (max-width: 700px) {
+    .container{
+        width: 100%;
+    }
+    .container form .user-details{
+        max-height: 450px;
+        overflow-y: scroll;
+    }
+    .user-details::-webkit-scrollbar{
+        width: 0;
+    }
+    form .user-details .input-box{
+        margin: 10px 0 5px 0;
+        width: 100%;
+    }
+    form .user-details .gender-details {
+        margin: 10px 0 5px 0;
+        width: 100%;
+    }
+}
+@media only screen and (height: 650px) {
+    main{
+        height: 100%;
+    }
+    .container{
+        height: 100%;
+    }
 }
