--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -107,7 +107,11 @@ form .connecter input{
 }
 @media only screen and (max-width: 700px) {
     .container{
-        width: 100%;
+        width: 95%;
+    }
+    nav{
+        max-width: 100%;
+        padding-left: 30px;
     }
     .container form .data{
         width: 100%;
