--- a/src/main/resources/static/css/passwordforgotten.css
+++ b/src/main/resources/static/css/passwordforgotten.css
@@ -108,7 +108,11 @@ form .mdp input{
 }
 @media only screen and (max-width: 700px) {
     .container{
-        width: 100%;
+    width: 95%;
+}
+    nav{
+        max-width: 100%;
+        padding-left: 30px;
     }
 }
 
