--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -128,7 +128,11 @@ form .button input{
 }
 @media only screen and (max-width: 700px) {
     .container{
-        width: 100%;
+        width: 95%;
+    }
+    nav{
+        max-width: 100%;
+        padding-left: 30px;
     }
     .container form .user-details{
         max-height: 450px;
