--- a/src/main/resources/static/css/signupsuperadmin.css
+++ b/src/main/resources/static/css/signupsuperadmin.css
@@ -144,10 +144,14 @@ form .button input{
 }
 @media only screen and (max-width: 700px) {
     .container{
-        width: 100%;
+        width: 95%;
+    }
+    nav{
+        max-width: 100%;
+        padding-left: 30px;
     }
     .container form .user-details{
-        max-height: 450px;
+        max-height: 480px;
         overflow-y: scroll;
     }
     .user-details::-webkit-scrollbar{
