--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -10,33 +10,74 @@
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/contact.css"/>
     <title>Contact</title>
 </head>
 <body>
 <div th:insert="fragments/navbar.html :: navbar"></div>
-<div>
-    <h1>Contact</h1>
-    <p th:text="${success}"></p>
-    <p th:text="${error}"></p>
-    <form action="/contactconfirm" id="contactConfirm" method="post">
-        <div>
-            <label for="object">Objet</label>
-            <input id="object" name="object" placeholder="Entrez l'objet du mail" required type="text">
-        </div>
-        <div>
-            <textarea id="body" name="body" rows="5" cols="33" required>Votre message</textarea>
-        </div>
-        <div th:object="${member}">
-            <select id="emailMember" name="emailMember">
-                <option value="">Choisir un membre</option>
-                <option value="all">Tous les membres</option>
-                <option th:each="member : ${members}"
-                        th:value="${member.email}"
-                        th:text="${member.firstName}+' '+${member.lastName}"></option>
-            </select>
-        </div>
-        <input id="contactButton" name='contactButton' type="submit" value="Envoyer">
+<div class="sidebar">
+    <div class="siderbar-logo">
+        <img class="logo" src="images/logo.png"/>
+    </div>
+    <div class="sidebar-menu">
+        <ul>
+            <li>
+                <a href="dashbord" class="act" ><span class="tab-bord"></span><span> Tableau de bord</span></a>
+            </li>
+            <li>
+                <a href="managemembers" class="active"><span class="G-member"></span><span> Gestion des membres</span></a>
+            </li>
+            <li>
+                <a href="" class="act"><span class="bill"></span><span> Billetterie</span></a>
+            </li>
+            <li>
+                <a href=""class="act"><span class="coll"></span><span> Collectes</span></a>
+            </li>
+            <li>
+                <a href="managepayments"class="act"><span class="pai"></span><span> Paiement</span></a>
+            </li>
+            <li>
+                <a href="contact"class="act"><span class="comm"></span><span> Communication </span></a>
+            </li>
+        </ul>
+    </div>
+</div>
+<div class="main-content">
+    <header>
+        <h1>Communication</h1>
+        <p th:text="${success}"></p>
+        <p th:text="${error}"></p>
+    </header>
+    <main>
+        <div class="formulaire">
+            <form action="/contactconfirm" id="contactConfirm" method="post">
+
+                <div class="user-details">
+                    <div class="input-box">
+                        <label class="details"  for="object">Objet</label>
+                        <input id="object" name="object" placeholder="Entrez l'objet du mail" required type="text">
+                    </div>
+                    <div class="input-box" >
+                        <textarea  id="body" name="body" rows="5" cols="33" required placeholder="Votre message"></textarea>
+                    </div>
+                    <div  th:object="${member}">
+                        <select id="emailMember" name="emailMember">
+                            <option value="">Choisir un membre</option>
+                            <option value="all">Tous les membres</option>
+                            <option th:each="member : ${members}"
+                                    th:value="${member.email}"
+                                    th:text="${member.firstName}+' '+${member.lastName}"></option>
+                        </select>
+                    </div>
+                    <div class="input-button1">
+                    <input id="contactButton" name='contactButton' type="submit" value="Envoyer">
+                    </div>
+                </div>
+
+
     </form>
+        </div>
+    </main>
 </div>
 </body>
 </html>
